# brush

./: .gitignore  CHANGELOG.FORK.md  Cargo.toml  README.md
brush/: Cargo.toml
brush-builtins/: Cargo.toml
brush-bundled-extras/: Cargo.toml
brush-bundled-extras/src/: bzip2_adapter.rs  clear_adapter.rs  column_adapter.rs  file_adapter.rs  grep_adapter.rs  gzip_adapter.rs  id_adapter.rs  lib.rs  ripgrep_adapter.rs  tar_adapter.rs  tree_adapter.rs  which_adapter.rs  xxd_adapter.rs  xz_adapter.rs  zip_adapter.rs
brush-core/: Cargo.toml
brush-core/src/: builtins.rs  commands.rs  sys.rs  wellknownvars.rs
brush-core/src/shell/: fs.rs  funcs.rs
brush-core/src/sys/: path_conv.rs  tokio_process.rs  windows.rs
brush-core/src/sys/stubs/: fs.rs
brush-core/src/sys/unix/: fs.rs
brush-core/src/sys/windows/: fs.rs  path_conv.rs
brush-coreutils-builtins/: Cargo.toml
brush-coreutils-builtins/src/: lib.rs
brush-experimental-builtins/: Cargo.toml
brush-experimental-builtins/src/: cygpath.rs  lib.rs
brush-parser/: Cargo.toml
brush-parser/src/: tokenizer.rs
brush-parser/src/parser/: mod.rs
brush-shell/: Cargo.toml
brush-shell/src/: args.rs  bundled.rs  entry.rs  productinfo.rs
brush-shell/tests/: bundled_extras_smoke.rs  bundled_pgid.rs
brush-shell/tests/cases/brush/: cli.yaml
docs/planning/: bundled-coreutils-pipelines.md  bundled-extras-cli-fidelity.md  bundled-extras-coverage-expansion.md  claude-md-and-tool-index.md  coreutils-coverage-expansion.md  path-conversion-msys.md  posixutils-rs-integration.md  upstream-v0.4.0-migration.md
docs/reference/: README.md  bundled-tools-index.md  experimental.md  path-conversion.md
docs/research/: grep-sed-awk-options.md
