[package]
name = "brush-bundled-extras"
description = "Adapter wrappers for non-uutils-coreutils utilities bundled into brush-shell (findutils/diffutils/procps/grep/sed/awk as available)"
version = "0.1.4"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
bench = false

[features]
# No utilities are enabled by default. Consumers opt into individual
# utilities (`extras.find`, `extras.xargs`, ...), source-grouped
# aggregates (`extras.findutils-all`, ...), or the top-level aggregate
# (`extras.all`).
default = []

# Per-utility features (findutils 0.8.0).
'extras.find' = ["dep:findutils"]
'extras.xargs' = ["dep:findutils"]

# Per-utility features (uutils/sed 0.1.1).
'extras.sed' = ["dep:sed"]

# Per-utility features (pegasusheavy/awk-rs 0.1.0).
'extras.awk' = ["dep:awk-rs"]

# Per-utility features (awnion/fastgrep 0.1.8). NOTE: enabling this
# requires rustc ≥ 1.92 — fastgrep's MSRV is above brush's workspace
# MSRV (1.88.0). Workspace MSRV intentionally NOT bumped; the
# feature-conditional MSRV is documented per the plan's gate 0
# decision (option b). See `docs/planning/posixutils-rs-integration.md`
# Cycle 0b-revised.
'extras.grep' = ["dep:fastgrep", "dep:clap", "dep:kanal"]

# Source-grouped aggregates.
'extras.findutils-all' = [
    'extras.find',
    'extras.xargs',
]
'extras.uutils-sed-all' = [
    'extras.sed',
]
'extras.awk-rs-all' = [
    'extras.awk',
]
'extras.fastgrep-all' = [
    'extras.grep',
]

# Top-level aggregate. Layers in everything the cycle has wired so far —
# findutils (Cycle 2), uutils/sed (posixutils-rs-integration Cycle 0a),
# awk-rs (Cycle 0c-revised), fastgrep (Cycle 0b-revised). diffutils
# (Cycle 3) and procps (Cycle 4) extend this set as they land.
#
# `extras.all` enabling `extras.fastgrep-all` means consumers of
# `experimental-bundled-extras` (the umbrella flag) inherit fastgrep's
# rustc ≥ 1.92 requirement transitively. Documented in the brush-shell
# flag below.
'extras.all' = [
    'extras.findutils-all',
    'extras.uutils-sed-all',
    'extras.awk-rs-all',
    'extras.fastgrep-all',
]

[lints]
workspace = true

[dependencies]
findutils = { version = "0.8.0", optional = true }
# uutils/sed exposes the standard `uumain` shape via `sed::sed::uumain`;
# uucore version (0.8.0) matches brush-coreutils-builtins, so the dep
# graph stays single-version. See
# `docs/planning/posixutils-rs-integration.md` Cycle 0a.
sed = { version = "0.1.1", optional = true }
# pegasusheavy/awk-rs exposes Lexer/Parser/Interpreter as a public lib
# (no single `run(args)` entrypoint); the adapter mirrors upstream
# `src/main.rs::run()`. License MIT/Apache-2.0; deps regex + thiserror
# only. CI tests Windows. See
# `docs/planning/posixutils-rs-integration.md` Cycle 0c-revised.
awk-rs = { version = "0.1.0", optional = true }
# awnion/fastgrep is a "drop-in replacement for GNU grep" with public
# `[lib]` modules (cli/output/pattern/searcher/threadpool/trigram/
# walker) and a bin target literally named `grep`; the adapter mirrors
# upstream `src/bin/grep.rs::main()`. License MIT/Apache-2.0.
# **fastgrep MSRV is 1.92** — above brush workspace MSRV (1.88) — so
# enabling the feature requires rustc ≥ 1.92. See
# `docs/planning/posixutils-rs-integration.md` Cycle 0b-revised.
# Also pulls `clap` and `kanal` for the adapter; those are used here as
# direct deps too, gated on the same feature.
fastgrep = { version = "0.1.8", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
kanal = { version = "0.1", optional = true }
