[package]
name = "brush-experimental-builtins"
description = "*EXPERIMENTAL builtins for a POSIX/bash shell (used by brush-shell)"
version = "0.1.1"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
bench = false

[features]
default = ['builtin.save', 'builtin.cygpath']
'builtin.save' = ["brush-core/serde", "dep:serde_json"]
# `cygpath` builtin: explicit POSIX (MSYS/Cygwin) ↔ Windows path
# conversion. Active surface on Windows; no-op passthrough on other
# platforms (kept enabled cross-platform so portable scripts work
# unchanged). See docs/planning/path-conversion-msys.md Cycle 1.
'builtin.cygpath' = []

[lints]
workspace = true

[dependencies]
brush-core = { version = "^0.5.0", path = "../brush-core" }
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
serde_json = { version = "1.0.149", optional = true }
